[package]
name = "hello-actix"
version = "0.1.0"
authors = ["SaltyAom <aomkirby123@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = 's'
lto = true
panic = 'abort'
codegen-units = 1

[dependencies]
actix-web = "4.0.0-beta.6"
